# screen_capture_lite

./: .gitignore  CMakeLists.txt  Cargo.toml  Config.cmake.in  README.md  build.rs
Example_CPP/: CMakeLists.txt  Screen_Capture_Example.cpp
examples/: window_count.rs
src_cpp/: CMakeLists.txt
src_rs/: lib.rs
